--- a/main.tex
+++ b/main.tex
@@ -1,37 +1,37 @@
 \documentclass[11pt,letterpaper]{article}
-\usepackage[margin=1in]{geometry}
-\usepackage[document]{ragged2e}
- \usepackage[T1]{fontenc}
- \usepackage[utf8]{inputenc}
- \usepackage[pdftex]{graphicx}
- \usepackage{subcaption}
- \usepackage{rotating}
+% \usepackage[margin=1in]{geometry}
+% \usepackage[document]{ragged2e}
+%  \usepackage[T1]{fontenc}
+%  \usepackage[utf8]{inputenc}
+  \usepackage[pdftex]{graphicx}
+%  \usepackage{subcaption}
+%  \usepackage{rotating}
  \usepackage[pdftex,hypertexnames=false,linktocpage=true]{hyperref}
  \hypersetup{colorlinks=true,linkcolor=blue,anchorcolor=blue,citecolor=blue,filecolor=blue,urlcolor=blue, bookmarksnumbered=true,pdfview=FitB}
-\usepackage{array}
-\usepackage{authblk}
-\usepackage{mathptmx}
-\usepackage{tabularx}
-\usepackage{wrapfig}
-\usepackage{lipsum}
-\usepackage{multirow}
-\usepackage[usenames, dvipsnames]{color}
-\usepackage[labelfont=bf]{caption}
-\usepackage{csvsimple}
-\usepackage[group-separator={,}]{siunitx}
-\usepackage{lscape}
-\usepackage{amsmath}
-\usepackage{float}
-\usepackage{listings}
-\usepackage{DejaVuSansMono}
-\usepackage{minted}
-\usepackage{paralist}
-\setminted[sh]{fontfamily=DejaVuSansMono-TLF,breaksymbolleft=,fontsize=\footnotesize}
-\setminted[matlab]{fontfamily=DejaVuSansMono-TLF,breaksymbolleft=,fontsize=\footnotesize}
-\lstset{basicstyle=\fontfamily{DejaVuSansMono-TLF}\footnotesize}
+% \usepackage{array}
+% \usepackage{authblk}
+% \usepackage{mathptmx}
+% \usepackage{tabularx}
+% \usepackage{wrapfig}
+% \usepackage{lipsum}
+% \usepackage{multirow}
+% \usepackage[usenames, dvipsnames]{color}
+% \usepackage[labelfont=bf]{caption}
+% \usepackage{csvsimple}
+% \usepackage[group-separator={,}]{siunitx}
+% \usepackage{lscape}
+% \usepackage{amsmath}
+% \usepackage{float}
+% \usepackage{listings}
+% \usepackage{DejaVuSansMono}
+% \usepackage{minted}
+% \usepackage{paralist}
+% \setminted[sh]{fontfamily=DejaVuSansMono-TLF,breaksymbolleft=,fontsize=\footnotesize}
+% \setminted[matlab]{fontfamily=DejaVuSansMono-TLF,breaksymbolleft=,fontsize=\footnotesize}
+% \lstset{basicstyle=\fontfamily{DejaVuSansMono-TLF}\footnotesize}
 
-\usepackage[style=chicago-authordate]{biblatex}
-\addbibresource{references/maize-GO-manuscript.bib}
+% \usepackage[style=chicago-authordate]{biblatex}
+% \addbibresource{references/maize-GO-manuscript.bib}
 
 
 \title{
