changes to main.tex

--- a/main.tex
+++ b/main.tex
@@ -88,9 +88,13 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
 \subsection{What are the requirements for GO-MAP?}
 
 \begin{itemize}
- \item OS:- linux
+ \item OS
+ \begin{itemize}
+     \item linux
+ \end{itemize}
+ 
 
- \item Languages
+ \item Programming Languages
  \begin{itemize}
    \item R v3.4
    \item Python v2
