added dir structure

--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
  \begin{itemize}
      \item linux
  \end{itemize}
- 
+
 
  \item Programming Languages
  \begin{itemize}
@@ -127,13 +127,13 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
 
 \end{itemize}
 
-The pipeline if downloaded from CyVerse contains all the data files and software to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
+The pipeline if downloaded from CyVerse containsthe data files and following software to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
 
 \begin{itemize}
  \item
        Sequence-similarity
  \item
-       BLAST
+       BLAST 2.6.0
  \item
        InterProScan5
  \item
