--- a/main.tex
+++ b/main.tex
@@ -50,84 +50,18 @@
 
 \section{Introduction}
 
-\subsection{What is GAMER-pipeline?}
-Gene Ontology - Meta Annotator for Plants (\textbf{GO-MAP}) is a pipeline which
-annotates GO terms to plant protein sequences. The pipeline uses three different
-approaches to annotate GO terms to plant proteins and uses a mix of custom code
-and existing software tools to assign GO terms. The pipeline was designed to
-create a high confidence GO annotation dataset for reference proteomes, and it
-is recommended that the pipeline in it's current form used for that. The main
-pipeline has been written using Python and R, and other software tools used will
-be briefly described in the requirements section. Three main approaches used to
-annotate GO terms are given below.
-
-\subsection{What are the methods used to annotate GO terms?}
-% \begin{enumerate}
-%   \item Sequence-similarity based methods
-%   \item Domain-presence based methods
-%   \item Mixed-method pipelines N
-% \end{enumerate}
-
-\subsubsection{Sequence-similarity based methods}
-Sequence-similarity based GO annotations were performed using the reciprocal-best-hit method against two different datasets namely TAIR and UniProt. The NCBI BLASTP tool will be used reciprocally to search for similar sequences between the protein sequences of target species being annotated and other datasets. The results from BLASTP search will be processed using R script to determine the reciprocal-best-hits and assign GO terms from TAIR and UniProt to the target species.
-
-\subsubsection{Domain-presence based methods}
-Putative protein domains will be assinged to the protein sequence using InterProScan5 pipeline. InterProScan5 uses a java based pipeline to find protein domain signatures in target sequences and assigns GO terms based on the presence of the domain signatures.
-
-\subsubsection{Mixed-method pipelines/tools}
-Three best performing pipelines/tools which have competed in the first iteration of the \href{http://biofunctionprediction.org}{CAFA} competition will be used to assign GO terms to proteins. These tools are \href{http://www.medcomp.medicina.unipd.it/Argot2-5/}{Argot2.5}, \href{http://ekhidna.biocenter.helsinki.fi/pannzer}{PANNZER}, and \href{http://montana.informatics.indiana.edu/fanngo/fanngo.html}{FANN-GO}. Each of the tools have specific requirements, setup instructions and pre-processing steps. These all will be explained in the setup section.
+\input{intro/intro}
 
 
 
 %%%%%%%%%%%%%%%%%%%%
 % Requirements and installation section
 %%%%%%%%%%%%%%%%%%%%
-\section{Installing Requirements and Obtaining GO-MAP}
-The GO-MAP pipeline itself will have all the code to run the pipeline, but some requirements have to be installed before GO-MAP can be used. \\[0.3cm]
+\section{Requirements to be installed}
+\input{require/require}
 
-\subsection{What are the requirements for GO-MAP?}
-
-\begin{itemize}
- \item OS
- \begin{itemize}
-     \item linux
- \end{itemize}
-
-
- \item Programming Languages
- \begin{itemize}
-   \item R v3.4
-   \item Python v2
-   \item Java v1.8
-   \item Perl
- \end{itemize}
-
- \item software
- \begin{itemize}
-   \item MATLAB
-   \item MySQL/MariaDB
- \end{itemize}
-
- \item Python Packages
- \begin{itemize}
-  \item biopython
-  \item numpy
-  \item scipy
-  \item MySQL-python
- \end{itemize}
-
- \item R packages
- \begin{itemize}
-  \item ontologyIndex
-  \item data.table
-  \item ggplot2
-  \item futile.logger
-  \item jsonlite
- \end{itemize}
-
-\end{itemize}
-
-The pipeline if downloaded from CyVerse containsthe data files and following software to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
+\section{Setting up GO-MAP}
+\input{setup/setup}
 
 \begin{itemize}
  \item
