corrected grammer in intro.tex

--- a/require/require.tex
+++ b/require/require.tex
@@ -43,3 +43,36 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
 \end{itemize}
 
 The pipeline if downloaded from CyVerse containsthe data files and following software to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
+
+\begin{itemize}
+ \item
+       Sequence-similarity
+ \item
+       BLAST 2.6.0
+ \item
+       InterProScan5
+ \item
+       Java 1.8*
+ \item
+       Python 2*
+ \item
+       Perl*
+ \item
+       FANN-GO
+ \item
+       Matlab*
+ \item
+       PANNZER
+ \item
+       Python 2
+ \item
+       MySQL/MariaDB*
+ \item
+       Argot2
+ \item
+       BLASTP
+ \item
+       Hmmer
+ \item
+       Web browser to submit jobs to batch processing
+\end{itemize}
