--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,21 +1,7 @@
 \subsection{What is GAMER-pipeline?}
-Gene Ontology - Meta Annotator for Plants (\textbf{GO-MAP}) is a pipeline which
-annotates GO terms to plant protein sequences. The pipeline uses three different
-approaches to annotate GO terms to plant proteins and uses a mix of custom code
-and existing software tools to assign GO terms. The pipeline was designed to
-create a high confidence GO annotation dataset for reference proteomes, and it
-is recommended that the pipeline in it's current form used for that. The main
-pipeline has been written using Python and R, and other software tools used will
-be briefly described in the requirements section. Three main approaches used to
-annotate GO terms are given below.
+Gene Ontology - Meta Annotator for Plants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses three different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used for that. The main pipeline has been written using Python and R, and other software tools used will be briefly described in the requirements section. Three main approaches used to annotate GO terms are given below.
 
-\subsection{What are the methods used to annotate GO terms?}
-% \begin{enumerate}
-%   \item Sequence-similarity based methods
-%   \item Domain-presence based methods
-%   \item Mixed-method pipelines N
-% \end{enumerate}
-
+\subsection{What methods are used to annotate GO terms?}
 \subsubsection{Sequence-similarity based methods}
 Sequence-similarity based GO annotations were performed using the reciprocal-best-hit method against two different datasets namely TAIR and UniProt. The NCBI BLASTP tool will be used reciprocally to search for similar sequences between the protein sequences of target species being annotated and other datasets. The results from BLASTP search will be processed using R script to determine the reciprocal-best-hits and assign GO terms from TAIR and UniProt to the target species.
 
