--- a/require.tex
+++ b/require.tex
@@ -1,13 +1,13 @@
-The GO-MAP pipeline itself will have all the code to run the pipeline, but some requirements have to be installed before GO-MAP can be used. \\[0.3cm]
+\section{Requirements to be installed}
+
+The GO-MAP pipeline itself will have all the code to run the pipeline, but some requirements have to be installed before GO-MAP can be used.
 
 \subsection{What are the requirements for GO-MAP?}
-
 \begin{itemize}
  \item OS
  \begin{itemize}
      \item linux
  \end{itemize}
-
 
  \item Programming Languages
  \begin{itemize}
