--- a/setup.tex
+++ b/setup.tex
@@ -1,3 +1,4 @@
+\section{Setting up GO-MAP}
 \subsection{What are the steps needed to setup the pipeline?}\label{what-are-the-steps-needed-to-setup-the-pipeline}
 
 \begin{enumerate}
