--- a/intro.tex
+++ b/intro.tex
@@ -8,7 +8,7 @@
 Sequence-similarity based GO annotations were performed using the reciprocal-best-hit method against two different datasets namely TAIR and UniProt. The NCBI BLASTP tool will be used reciprocally to search for similar sequences between the protein sequences of target species being annotated and other datasets. The results from BLASTP search will be processed using R script to determine the reciprocal-best-hits and assign GO terms from TAIR and UniProt to the target species.
 
 \subsubsection{Domain-presence based methods}
-Putative protein domains will be assinged to the protein sequence using InterProScan5 pipeline. InterProScan5 uses a java based pipeline to find protein domain signatures in target sequences and assigns GO terms based on the presence of the domain signatures.
+Putative protein domains will be assigned to the protein sequence using InterProScan5 pipeline. InterProScan5 uses a java based pipeline to find protein domain signatures in target sequences and assigns GO terms based on the presence of the domain signatures.
 
 \subsubsection{Mixed-method pipelines or tools}
 Three best performing pipelines/tools which have competed in the first iteration of the \href{http://biofunctionprediction.org}{CAFA} competition will be used to assign GO terms to proteins. These tools are \href{http://www.medcomp.medicina.unipd.it/Argot2-5/}{Argot2.5}, \href{http://ekhidna.biocenter.helsinki.fi/pannzer}{PANNZER}, and \href{http://montana.informatics.indiana.edu/fanngo/fanngo.html}{FANN-GO}. Each of the tools have specific requirements, setup instructions and pre-processing steps. These all will be explained in the setup section.
