updated underline to bold

--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 \subsection{What is GAMER-pipeline?}
-\underline{G}ene \underline{O}ntology - \underline{M}eta \underline{A}nnotator for \underline{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses three different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used for that. The main pipeline has been written using Python and R, and other software tools used will be briefly described in the requirements section. Three main approaches used to annotate GO terms are given below.
+\textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses three different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used for that. The main pipeline has been written using Python and R, and other software tools used will be briefly described in the requirements section. Three main approaches used to annotate GO terms are given below.
 
 \subsection{What methods are used to annotate GO terms?}
 \subsubsection{Sequence-similarity based methods}
