--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 
 \title{
   \textbf{GO-MAP} \\
-  \Large{ \underline{G}ene \underline{O}ntology - \underline{M}eta \underline{A}nnotator for \underline{P}lants} \\
+  \Large{ \textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants} \\
   \large {Version 0.1}
 }
 \author{Kokulapalan (Gokul) Wimalanathan}
