edited requirements section

--- a/intro.tex
+++ b/intro.tex
@@ -1,14 +1,15 @@
 \section{Introduction}
+\label{sec:intro}
 
-\subsection{What is GAMER-pipeline?}
-\textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses three different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used for that. The main pipeline has been written using Python and R, and other software tools used will be briefly described in the requirements section. Three main approaches used to annotate GO terms are given below.
+\subsection{What is GO-MAP?}
+\textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses 3 different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used to annotate proteomes. The main pipeline is written in Python and R, and other software tools used will be briefly described in Section \ref{sec:requirements}. 
 
-\subsection{What methods are used to annotate GO terms?}
+\subsection{What annotation methods are used to assign GO terms?}
 \subsubsection{Sequence-similarity based methods}
-Sequence-similarity based GO annotations were performed using the reciprocal-best-hit method against two different datasets namely TAIR and UniProt. The NCBI BLASTP tool will be used reciprocally to search for similar sequences between the protein sequences of target species being annotated and other datasets. The results from BLASTP search will be processed using R script to determine the reciprocal-best-hits and assign GO terms from TAIR and UniProt to the target species.
+Sequence-similarity based GO annotations were performed using the reciprocal-best-hit method against two different datasets, namely TAIR and UniProt. The NCBI BLASTP tool will be used reciprocally to search for similar sequences between the protein sequences of target species being annotated and other datasets. The results from BLASTP search will be processed using R script to determine the reciprocal-best-hits and assign GO terms from TAIR and UniProt to the target species.
 
 \subsubsection{Domain-presence based methods}
-Putative protein domains will be assigned to the protein sequence using InterProScan5 pipeline. InterProScan5 uses a java based pipeline to find protein domain signatures in target sequences and assigns GO terms based on the presence of the domain signatures.
+Putative protein domains will be assigned to the protein sequence using InterProScan5 pipeline. InterProScan5 is a java based pipeline that finds protein domain signatures in target sequences and assigns GO terms based on the presence of the protein signatures.
 
 \subsubsection{Mixed-method pipelines or tools}
-Three best performing pipelines/tools which have competed in the first iteration of the \href{http://biofunctionprediction.org}{CAFA} competition will be used to assign GO terms to proteins. These tools are \href{http://www.medcomp.medicina.unipd.it/Argot2-5/}{Argot2.5}, \href{http://ekhidna.biocenter.helsinki.fi/pannzer}{PANNZER}, and \href{http://montana.informatics.indiana.edu/fanngo/fanngo.html}{FANN-GO}. Each of the tools have specific requirements, setup instructions and pre-processing steps. These all will be explained in the setup section.
+Three top performing pipelines/tools which have competed in the first iteration of the \href{http://biofunctionprediction.org}{CAFA} competition will be used to assign GO terms to proteins. These tools are \href{http://www.medcomp.medicina.unipd.it/Argot2-5/}{Argot2.5}, \href{http://ekhidna.biocenter.helsinki.fi/pannzer}{PANNZER}, and \href{http://montana.informatics.indiana.edu/fanngo/fanngo.html}{FANN-GO}. Each of the tools have specific requirements, setup instructions and pre-processing steps. The details of these steps will be explained in the following sections [TODO]
