--- a/main.tex
+++ b/main.tex
@@ -30,8 +30,7 @@
 
 \input{steps.tex}
 
-\subsection{What are the outputs of
- GAMER-pipeline?}\label{what-are-the-outputs-of-gamer-pipeline}
+\subsection{What are the outputs of GAMER-pipeline?}
 
 GO annotations from GAMER-pipeline will be presented in Go Annotation
 2.0 Format (GAF). All the annotations from different methods will
