--- a/setup.tex
+++ b/setup.tex
@@ -1,5 +1,5 @@
 \section{Setting up GO-MAP}
-\subsection{What are the steps needed to setup the pipeline?}\label{what-are-the-steps-needed-to-setup-the-pipeline}
+\subsection{What are the steps needed to setup the pipeline?}
 
 \begin{enumerate}
  \def\labelenumi{\arabic{enumi}.}
