--- a/steps.tex
+++ b/steps.tex
@@ -1,7 +1,8 @@
 \section{Running GO-MAP}
 
 \subsection{How to run the
- GAMER-pipeline?}\label{how-to-run-the-gamer-pipeline}
+ GAMER-pipeline?}
+ \label{how-to-run-the-gamer-pipeline}
 
 GAMER-pipeline is run in two steps using pipeline1.py and pipleine2.py.
 First part of the pipeline runs the Sequence-similarity methods and
@@ -168,7 +169,8 @@ dataset from all differnt approaches. The main steps are given below.
 \end{itemize}
 
 \subsection{How to run the
- GAMER-pipeline?}\label{how-to-run-the-gamer-pipeline}
+ GAMER-pipeline?}
+ %\label{how-to-run-the-gamer-pipeline}
 
 GAMER-pipeline is run in two steps using pipeline1.py and pipleine2.py.
 First part of the pipeline runs the Sequence-similarity methods and
