--- a/require.tex
+++ b/require.tex
@@ -1,14 +1,31 @@
 \section{Requirements to be installed}
+\label{sec:requirements}
 
-The GO-MAP pipeline itself will have all the code to run the pipeline, but some requirements have to be installed before GO-MAP can be used.
+The [DOI release] of the GO-MAP pipeline contains code, software, and data files to run the pipeline. Although, there are some basic requirements which need to be installed. The requirements that have to be installed are listed below.
 
-\subsection{What are the requirements for GO-MAP?}
+\subsection{What are the requirements that need to be installed to run GO-MAP?}
+\label{subsec:install_req}
+
 \begin{itemize}
+ \item Hardware
+ \begin{itemize}
+     \item Storage
+     \begin{itemize}
+         \item minimum: 250GB
+         \item recommended: $\geq$300GB
+     \end{itemize}
+     \item Memory
+     \begin{itemize}
+         \item minimum: 16 GB
+         \item recommended: $\geq$32 GB
+     \end{itemize}
+ \end{itemize}
+
  \item OS
  \begin{itemize}
      \item linux
  \end{itemize}
-
+ 
  \item Programming Languages
  \begin{itemize}
    \item R v3.4
@@ -17,9 +34,9 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
    \item Perl
  \end{itemize}
 
- \item software
+ \item Software
  \begin{itemize}
-   \item MATLAB
+   \item MATLAB $\geq$v2016
    \item MySQL/MariaDB
  \end{itemize}
 
@@ -42,37 +59,39 @@ The GO-MAP pipeline itself will have all the code to run the pipeline, but some 
 
 \end{itemize}
 
-The pipeline if downloaded from CyVerse containsthe data files and following software to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
+
+\subsection{What are the software tools needed to run specific annotation methods?}
 
 \begin{itemize}
- \item
-       Sequence-similarity
- \item
-       BLAST 2.6.0
- \item
-       InterProScan5
- \item
-       Java 1.8*
- \item
-       Python 2*
- \item
-       Perl*
- \item
-       FANN-GO
- \item
-       Matlab*
- \item
-       PANNZER
- \item
-       Python 2
- \item
-       MySQL/MariaDB*
- \item
-       Argot2
- \item
-       BLASTP
- \item
-       Hmmer
- \item
-       Web browser to submit jobs to batch processing
+    \item Sequence-similarity
+        \begin{itemize}
+            \item BLASTP
+        \end{itemize}
+    \item Domain-presence
+        \begin{itemize}
+            \item InterProScan5
+        \end{itemize}
+    \item Mixed-method Pipelines
+    \begin{itemize}
+        \item FANN-GO
+        \begin{itemize}
+            \item Matlab\footnote[1]{Part of tools installed as mentioned in Section \ref{subsec:install_req}}
+            \item BLASTP
+        \end{itemize}
+        \item PANNZER
+        \begin{itemize}
+            \item MySQL/MariaDB\footnotemark[1]
+            \item BLASTP
+        \end{itemize}
+        \item Argot2
+        \begin{itemize}
+            \item Hmmer
+            \item BLASTP
+            \item Web browser\footnotemark[1] \footnote[2]{to submit jobs to batch processing}
+        \end{itemize}
+    \end{itemize}
 \end{itemize}
+
+The pipeline file downloaded from CyVerse contains the data files and software tools to run the process on a given protein sequence fasta file.
+
+The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
