--- a/require.tex
+++ b/require.tex
@@ -20,43 +20,44 @@ The [DOI release] of the GO-MAP pipeline contains code, software, and data files
          \item recommended: $\geq$32 GB
      \end{itemize}
  \end{itemize}
-
- \item OS
- \begin{itemize}
-     \item linux
- \end{itemize}
- 
- \item Programming Languages
- \begin{itemize}
-   \item R v3.4
-   \item Python v2
-   \item Java v1.8
-   \item Perl
- \end{itemize}
-
  \item Software
  \begin{itemize}
-   \item MATLAB $\geq$v2016
-   \item MySQL/MariaDB
- \end{itemize}
-
- \item Python Packages
- \begin{itemize}
-  \item biopython
-  \item numpy
-  \item scipy
-  \item MySQL-python
- \end{itemize}
-
- \item R packages
- \begin{itemize}
-  \item ontologyIndex
-  \item data.table
-  \item ggplot2
-  \item futile.logger
-  \item jsonlite
- \end{itemize}
-
+     \item OS
+     \begin{itemize}
+         \item linux
+     \end{itemize}
+     
+     \item Programming Languages
+     \begin{itemize}
+       \item R v3.4
+       \item Python v2
+       \item Java v1.8
+       \item Perl
+     \end{itemize}
+    
+     \item Software
+     \begin{itemize}
+       \item MATLAB $\geq$v2016a
+       \item MySQL/MariaDB
+     \end{itemize}
+    
+     \item Python Packages
+     \begin{itemize}
+      \item biopython
+      \item numpy
+      \item scipy
+      \item MySQL-python
+     \end{itemize}
+    
+     \item R packages
+     \begin{itemize}
+      \item ontologyIndex
+      \item data.table
+      \item ggplot2
+      \item futile.logger
+      \item jsonlite
+     \end{itemize}
+\end{itemize}
 \end{itemize}
 
 
