removed section references they do not convert well with rst

--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 \label{sec:intro}
 
 \subsection{What is GO-MAP?}
-\textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses 3 different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used to annotate proteomes. The main pipeline is written in Python and R, and other software tools used will be briefly described in Section \ref{sec:requirements}. 
+\textbf{G}ene \textbf{O}ntology - \textbf{M}eta \textbf{A}nnotator for \textbf{P}lants (\textbf{GO-MAP}) is a pipeline that annotates GO terms to plant protein sequences. The pipeline uses 3 different approaches to annotate GO terms to plant proteins and uses a mix of custom code and existing software tools to assign GO terms. The pipeline was designed to create a high confidence GO annotation dataset for reference proteomes, and it is recommended that the pipeline in it's current form used to annotate proteomes. The main pipeline is written in Python and R, and other software tools used will be briefly described in the next Section. 
 
 \subsection{What annotation methods are used to assign GO terms?}
 \subsubsection{Sequence-similarity based methods}
