--- a/require.tex
+++ b/require.tex
@@ -93,9 +93,7 @@ The [DOI release] of the GO-MAP pipeline contains code, software, and data files
     \end{itemize}
 \end{itemize}
 
-$^\dagger$Part of requirements installed as mentioned in Section \ref{subsec:install_req}
-
-$^\ddagger$To submit jobs to batch processing
-\\
+$^\dagger$Part of requirements installed as mentioned in this section\\
+$^\ddagger$To submit jobs to batch processing \\
 
 The pipeline file downloaded from CyVerse contains the data files and software tools to run the process on a given protein sequence fasta file. The disk space required for the pipeline is large (\textasciitilde{}160GB) and when it runs it will require close to 300GB of disk space.
