Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,6 @@
 \documentclass[11pt,letterpaper]{article}
-\usepackage[pdftex]{graphicx}
-\usepackage[margin=1in]{geometry}
-\usepackage[pdftex,hypertexnames=false,linktocpage=true]{hyperref}
-\hypersetup{colorlinks=true,linkcolor=blue,anchorcolor=blue,citecolor=blue,filecolor=blue,urlcolor=blue, bookmarksnumbered=true,pdfview=FitB}
 
+\usepackage{GOMAP}
 % \usepackage[style=chicago-authordate]{biblatex}
 % \addbibresource{references/maize-GO-manuscript.bib}
 
